--- a/frontend-reactjs/package.json
+++ b/frontend-reactjs/package.json
@@ -17,10 +17,11 @@
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
